@@ -2,7 +2,7 @@
 
 function pad(number) {
 	number = number + ''; // convert to string
- 	while (number.length < 3) {
+ 	while (number.length < 4) {
 		number = "0" + number;
 	}
 	return number;
@@ -10,7 +10,7 @@ function pad(number) {
 
 
 Builder.load("NouveauMovie.es");
-max = 30;
+max =1 ;
 for (i = 0; i <=  max; i+=1) {
        c = i/max;
 
@@ -19,7 +19,14 @@ for (i = 0; i <=  max; i+=1) {
 	Builder.define("_rz",c*360);
 	Builder.define("_md",20+c*3000);
 	Builder.define("_dofa",0.2+ 0.1*Math.sin(c*3.1415*2));
-	//Builder.define("_dofb",0.09);
-	Builder.render();
-   	Builder.raytraceToFile("N" + pad(i) + ".png",true);
+
+	Builder.build();
+
+       // ---- Sunflow raytrace -----
+       name = "f:/Test/out" + pad(i);
+	Builder.templateRenderToFile("Sunflow-Colored.rendertemplate", name + ".sc",true); 
+       Builder.execute('"C:/Program Files/Java/jdk1.6.0_21/bin/java"', '-Xmx1G -server -jar  "%SUNFLOW%/sunflow.jar" ' +  name + ".sc -nogui -o " + name + ".png", true);
+   	
+	 // ---- Internal raytrace ------
+       // Builder.raytraceToFile("N" + pad(i) + ".png",true);
 }
